# joker-and-the-queen

./: perfect_simulation.ipynb  pyproject.toml  simple_simulation.ipynb
.devcontainer/: Dockerfile  devcontainer.json
joker_and_the_queen/: __init__.py  deck.py  game.py  game_test.py  play.py
joker_and_the_queen/ai/: __init__.py  base.py  perfect_counting.py  perfect_counting_test.py  simple.py  simple_test.py
